Fix cache icon in mobile
In mobile the cache icon was overlapping the UI of cart.

--- a/src/scss/pages/_general.scss
+++ b/src/scss/pages/_general.scss
@@ -4568,6 +4568,9 @@ ul.brands__list {
         font-size: 18px!important;
         line-height: 24px
     }
+    .adopt-controller-button.adopt-controller-button-left.svelte-3vkahb{
+        z-index: 99;
+    }
 }
 
 @media(min-width: 991px) {
